# mycontabile

./: .gitignore  README.md  demisemiquaver.csv  main.py  pyproject.toml
.github/workflows/: deploy-example.yml
example/: schedule.csv
static/script/: main.js
static/style/: main.css
template/: index.html  manifest.json  sw.js
